--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Hello World</title>
   </head>
   <body>
-    <h1>First Typing Things</h1>
+    <h1>First Typing Things. I am changing something</h1>
   </body>
 </html>
